fixed margins on SC

--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-<div class="row margins">
+<div class="row">
     <div class="col-sm-12 homepage">
         <div>
             <img class="picture img-fluid" src = "/assets/img/okstategear-copyright.png"/>
