--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -1,17 +1,17 @@
 <div class="container">
-    <div class="row margins">
-            <div class="col-sm-2" style="font-family: Arial, Helvetica, sans-serif;">
-                <app-filter></app-filter>
-            </div>
+<div class="row">
+    <div class="col-sm-2" style="font-family: Arial, Helvetica, sans-serif; margin-top:25px;">
+        <app-filter></app-filter>
+    </div>
         
-            <div class="col-md-8" style="font-family: Arial, Helvetica, sans-serif;">
-                <app-product-list style="text-align:center">Item List</app-product-list>
-            </div>
+    <div class="col-md-8" style="font-family: Arial, Helvetica, sans-serif; margin-top: 25px;">
+        <app-product-list style="text-align:center">Item List</app-product-list>
+    </div>
         
-            <div class="col-sm-2" style="font-family: Arial, Helvetica, sans-serif;">
-                <app-cart></app-cart>
-            </div>
-        </div>
+    <div class="col-sm-2" style="font-family: Arial, Helvetica, sans-serif; margin-top:25px;">
+        <app-cart></app-cart>
+    </div>
+</div>
 
     
     
@@ -20,8 +20,8 @@
         <div>
                 <form method="POST" action="mailto:emladd10@gmail.com">
                     <p style="font-style: italic; font-size: smaller;">Can't find what you're looking for?
-                        Click and tell us how we can accommodate you.
-                        <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Click Here</Button>
+                        Send us an email and tell us how we can accommodate you.
+                        <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Send an Email</Button>
                     </p>
                 </form>
         </div>
