updated email address

--- a/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
     <!-- test button for don't see what you like for shopping cart page-->
     <div class="row" style="font-family: Arial, Helvetica, sans-serif;">
         <div>
-                <form method="POST" action="mailto:emladd10@gmail.com">
+                <form method="POST" action="mailto:info.osuswag@gmail.com">
                     <p style="font-style: italic; font-size: smaller;">Can't find what you're looking for?
                         Send us an email and tell us how we can accommodate you.
                         <Button ID="submit" runat="server" style="font-style: italic; font-size: smaller;">Send an Email</Button>
