--- a/Alumni-Swag-App/src/app/home/home.component.html
+++ b/Alumni-Swag-App/src/app/home/home.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="row">
         <p style="text-align: center;" class="col-sm-3"></p>
-        <div class="col-sm-6 footer-margins">
+        <div class="col-sm-6" style="text-align: center;">
             <!--
                 img
                 img
