--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -14,7 +14,7 @@
     <input type="submit" value="Send Email" /> 
     </form> -->
 
-    <form ng-submit="prdoucts()" class="btn btn-sm">
+    <form ng-submit="prdoucts()" class="btn btn-sm" method="POST">
         <input type = "submit" value="Submit">
     </form>
 
