--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -14,8 +14,8 @@
     <input type="submit" value="Send Email" /> 
     </form> -->
 
-    <form ng-submit="prdoucts()" class="btn btn-sm" method="POST">
-        <input type = "submit" value="Submit">
+    <form ng-submit="prdoucts()" class="btn btn-sm" method="POST" action="mailto:qbenedict2@att.net">
+        <input type = "submit" value="Submit" runat="server">
     </form>
 
     
