post cart items

--- a/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
+++ b/Alumni-Swag-App/src/app/shopping-cart/cart/cart.component.html
@@ -14,7 +14,7 @@
     <input type="submit" value="Send Email" /> 
     </form> -->
 
-    <form ng-submit="prdoucts()" class="btn btn-sm" method="POST" action="mailto:qbenedict2@att.net">
+    <form ng-submit="prdoucts()" class="btn btn-sm" method="POST" action="cart-item/cart-item.component.html">
         <input type = "submit" value="Submit" runat="server">
     </form>
 
